Fixing alignment

--- a/src/styles/components/_history.scss
+++ b/src/styles/components/_history.scss
@@ -39,6 +39,7 @@ history{
       span{
         display: inline-table;
         margin-left: 4px;
+        width: 90%;
         em{
           padding-left: 5px;
         }
